refactored the way ATMs work, still missing functionality on them

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,6 @@
+# How much money will be taxed from each transaction at an ATM
+atm-transaction-fee:
+
 # Necesary amount of a shop item to start getting a discount.
 # Ex. If there is more than 300 stock, apply discount.
 npcshop-stock-amount-discount: 300
